пытаюсь сделать отображение каталога

--- a/templates/content/tree.html
+++ b/templates/content/tree.html
@@ -1,11 +1,8 @@
-<script src="/static/odin/js/yamoofotki.js"></script>
-<script>
-$(document).ready(function() {
 
-	YaMooFotki.username = 'tdodin@yandex.ru'
-	alert ('werwerwer')
 
-	});
-</script>
+<ul>
+{% for t in items %}
+	<li> {{t.code}} >>>  {{t.name}} 
+{% endfor %}
+</ul>
 
-Hi All
