Загрузка прайса в БД

--- a/templates/frm_load_file.html
+++ b/templates/frm_load_file.html
@@ -1,4 +1,4 @@
-﻿{% extends "main_page.html" %}
+﻿{% extends "base.html" %}
 {% block html_head %}
 
 <meta http-equiv = "cache-control" content = "max-age=0">
