--- a/templates/category.html
+++ b/templates/category.html
@@ -17,24 +17,32 @@
 
 		{% if Is_admin %}
 			<p class = "Content" align = "right">
-				<a href = "/edit_item/{{item.id}}"> Изменить</a>&nbsp|&nbsp
-				<a href = "/delete_item/{{item.id}}"> Удалить</a>
+				<a href = "/edit_item/{{item.code}}"> Изменить</a>&nbsp|&nbsp
+				<a href = "/delete_item/{{item.code}}"> Удалить</a>
 			</p>
 		{% endif %}
 	{% endif %}
 
+	{% for item in categories %}
+		<li> <h4> <a href="/category/{{item.code}}">{{ item.name }}</a></h4>
+	{% endfor%}
+	
 	<ul class="media-list">
 	{% for item in products %}
 		<li class="media product-row well well-small">
-        	<a href = "/product/{{item.id}}">
-				<div class="pull-right product-image-sm thumbnail  imgLiquid">
-					<img class="img" src="{{item.small_image_url}}" alt="{{item.name}}">
+        	<a href = "/product/{{item.code}}">
+				<div class="pull-right product-image-sm thumbnail  imgLiquid">					
+					{% if item.small_image_url %}
+						<img class="img" src="{{item.small_image_url}}" alt="{{item.name}}">
+					{% else %}	
+						<img class="img" src="/static/odin/img/no_photo.jpg" alt="{{item.name}}">
+					{% endif %}	
 				</div>
 			</a>
 
 			<div class="media-body">
 				<div class="span9">
-					 <p><a href = "/product/{{item.id}}" title="Подробное описание">
+					 <p><a href = "/product/{{item.code}}" title="Подробное описание">
 							<b>{{item.name}}</b>
 						</a>
 	                 <p><small>Артикул: {{item.code}}</small>
@@ -42,19 +50,19 @@
 				<div class="product-price span3">
 					<font size="4"><b>{{item.price|float}}&nbspр.</b></font>
 	                <form class="form-inline">
-						<input id="cnt_{{item.id}}" type="text" min="1" max="1000" value="1">
+						<input id="cnt_{{item.code}}" type="text" min="1" max="1000" value="1">
 							<small><span class="muted">шт.</span></small>&nbsp
 						{% if Is_admin %}
 							<button
 								class="btn btn-primary btn-small"
-								id="buy_{{item.id}}"
-								onclick="location.assign('/edit_item/{{item.id}}')">
+								id="buy_{{item.code}}"
+								onclick="location.assign('/edit_item/{{item.code}}')">
 								Изменить
 							</button>
 						{% else %}
 							<button
 								class="btn btn-info btn-mini"
-								id="buy_{{item.id}}"
+								id="buy_{{item.code}}"
 								onclick="add_product(event); show_msg('Товар добавлен в корзину'); return false"
 								title="Купить {{item.name}}"
 							>
@@ -69,7 +77,7 @@
 	<hr>
 	<ul class="thumbnails">
 			{% for item in nodes_list %}
-			<li><a class="thumbnail" href = "/category/{{item.id}}" title="{{item.name}}">
+			<li><a class="thumbnail" href = "/category/{{item.code}}" title="{{item.name}}">
 					<h3>{{item.name}}</h3>
 				</a>
 			{% endfor %}
