--- a/templates/product.html
+++ b/templates/product.html
@@ -2,14 +2,14 @@
 {% block content %}
 	<div class="page-header">
 		<ul class="breadcrumb">
-		{% for item in current_node.GetParents%}
-			<li><a href="/category/{{item.id}}" title="{{item.description}}"> {{item.name}}</a><span class="divider">/</span>
+		{% for item in Current_Path %}
+			<li><a href="/category/{{item.code}}" > {{item.name}}</a><span class="divider">/</span>
 		{% endfor%}
 		</ul>
 
 		{% if Is_admin %}
 		<p align = "right">
-			<a href = "/edit_item/{{item.id}}"> изменить</a>
+			<a href = "/edit_item/{{item.code}}"> изменить</a>
 		{% endif %}
 	</div>
 	<div class="media">
@@ -18,13 +18,13 @@
 		</div>
 		<div class="medea-body">
 				<div class="product-price pull-right">
-					<font size="4"><b>{{item.price|floatformat}}&nbspр.</b></font>
+					<font size="4"><b>{{item.price|float}}&nbspр.</b></font>
 	                <form class="form-inline">
-						<input id="cnt_{{item.id}}" type="text" min="1" max="1000" value="1">
+						<input id="cnt_{{item.code}}" type="text" min="1" max="1000" value="1">
 							<small><span class="muted">шт.</span></small>&nbsp
 							<button
 								class="btn btn-info btn-mini"
-								id="buy_{{item.id}}"
+								id="buy_{{item.code}}"
 								onclick="add_product(event); show_msg('Товар добавлен в корзину'); return false"
 								title="Купить {{item.name}}">
 							Заказать
