--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -26,7 +26,7 @@
 <div class="span">
 	<ul>
 		{% for item in results %}
-			<li> <a href = "{{item.link}}">
+			<li> <a href = "/product/{{item.code}}">
 					{{item.name}}
 				 </a>
 		{% endfor %}
