Делаем оформление заказа таблички создали, нужно заполнять с сайта

--- a/templates/basket.html
+++ b/templates/basket.html
@@ -11,7 +11,7 @@
 
 	<div class="alert alert-info">Проверьте Ваш заказ и нажмите кнопку [Оформить]</div>
 	<div class="row-fluid">
-		<form class="form span" action="order" method="POST" enctype="multipart/form-data">
+		<form class="form span"action="/order/" method="POST" enctype="multipart/form-data">
 		<table id="items" class="table table-hover" width="100%">
 			<thead>
 			<tr>
