--- a/templates/basket.html
+++ b/templates/basket.html
@@ -2,16 +2,18 @@
 
 {% block content %}
 	<div class="page-header">
-	<h3>Ваша корзина</h3>
+	<h3>Ваш заказ</h3>
+		Проверьте Ваш заказ и нажмите кнопку [Оформить]
 	</div>
 
 	{% if not items_list %}
 		<div class="alert"> К сожалению, Ваша корзина пуста </div>
 	{% else %}
+	
 
-	<div class="alert alert-info">Проверьте Ваш заказ и нажмите кнопку [Оформить]</div>
-	<div class="row-fluid">
-		<form class="form span"action="/order/" method="POST" enctype="multipart/form-data">
+		<form class="form-horizontal" action="/order/" method="POST" enctype="multipart/form-data">
+		<div class="control-group">
+
 		<table id="items" class="table table-hover" width="100%">
 			<thead>
 			<tr>
@@ -46,7 +48,6 @@
 
 			</tr>
 		{% endfor %}
-
 			</tbody>
 			<tfoot>
 			<tr>
@@ -63,14 +64,13 @@
 		</tfoot>
 		</table>
 	</div>
-	<hr>
-	<div class="row-fluid">
-		<div class="span3 pull-right">
+
+	{% include "mod_client.html" %}
+
 			<button type="submit" class="btn pull-right">Оформить</button>
-		</div>
-	</div>
 	</form>
 	{% endif %}
+
 <script>
 	$('#items').ready(function () {
 
