--- a/templates/order_letter.html
+++ b/templates/order_letter.html
@@ -1,12 +1,14 @@
 <html>
 	<body>
-	<h1>Заказ {{order.key.id}}</h1>
+	<h1>Заказ {{order.id}}</h1>
 	<p>Клиент:	{{order.org_name}}</p>
 	<p>ФИО:	{{order.user_name}}</p>
+	<p>Почта:{{order.user_mail}}</p>
 	<p>Телефон: {{order.user_phone1}} ({{order.user_phone2}})</p>
 	<p>Адрес: {{order.addr}}</p>
 	<p><i> {{order.remarks}}</i>
 	<hr>
+	{% if products %}
 		<table id="items">
 			<th width = 75%>
 				Название товара
@@ -17,20 +19,21 @@
 			<th>
 				Стоимость
 			</th>
-		{% for item in order.products %}
+		{% for item in products %}
 		<tr>
-			<td> {{item.name}} </td> 
-			<td> {{item.count}} </td> 
-			<td> {{item.amount|floatformat}} </td> 
+			<td> {{item.name}} | {{item.code}} </td> 
+			<td> {{item.cnt}} </td> 
+			<td> {{item.amount|float}} </td> 
 		</tr>	
 		{% endfor %}	
 		<tr>
 			<td> ИТОГО: </td> 
 			<td>  </td> 
-			<td> {{order.amount_sum|floatformat}} </td> 
+			<td> {{ products|sum(attribute='amount') }} </td> 
 		</tr>	
 		</table>
 	<hr>
+	{% endif %}
 	</body>
 </html>
 
