загрузка остатков и обновление цен

--- a/tdodin/app/templates/category.html
+++ b/tdodin/app/templates/category.html
@@ -70,13 +70,13 @@
 								В корзину
 							</button>
 						{% endif %}
-						<br><small>
+						<div style="margin-top: 8px"><small>
 						{% if item.countOnStock > 0 %}
 							<span class="text-success"> есть в наличии </span>
 						{% else %}
 							<span class="text-error"> под заказ </span>
 						{% endif %}
-						</small>&nbsp
+						</small></div>
 					</form>
 				</div>
 			</div>
