--- a/tdodin/app/templates/base.html
+++ b/tdodin/app/templates/base.html
@@ -26,12 +26,9 @@
 	  })();
 	</script>
 
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"> </script>
-	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"> </script>
-	<script src="/static/jquery/jquery.fancytree.min.js" type="text/javascript"></script>
-	<link rel="stylesheet" type="text/css" href="/static/fancytree/ui.fancytree.css" />
- 		
+	<script type="text/javascript" src="/static/jquery/jquery.js"> </script>
 	<script type="text/javascript" src="/static/jquery/jquery.cookie.js"> </script>
+	<script type="text/javascript" src="/static/jquery/tree.jquery.min.js"> </script>
 	<script type="text/javascript" src="/static/bootstrap/js/bootstrap.min.js"> </script>	
 	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-notify.js"></script>
 	<script type="text/javascript" src="/static/odin/js/odin.js"></script>
@@ -42,6 +39,7 @@
  	<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap-notify.css">
 	<link rel="stylesheet" type="text/css" href="/static/odin/css/odin.css" />
+	<link rel="stylesheet" type="text/css" href="/static/odin/css/jqtree.css" />
 </head><body>
 
 <div class="container-fluid">
