--- a/tdodin/app/templates/main_page.html
+++ b/tdodin/app/templates/main_page.html
@@ -49,6 +49,7 @@
 		<div class="sidebar pull-left">
 					{% include "mod_catalog.html"%}
 					{% include "mod_login.html"%}
+					{% include "mod_meteo.html"%}
 		</div>
 		
 		<div class="media-body site-content">	
