каталог на основе jqTree

--- a/tdodin/app/templates/frm_load_file.html
+++ b/tdodin/app/templates/frm_load_file.html
@@ -1,4 +1,4 @@
-﻿{% extends "base.html" %}
+﻿{% extends "main_page.html" %}
 {% block html_head %}
 
 <meta http-equiv = "cache-control" content = "max-age=0">
