--- a/tdodin/app/templates/main_page.html
+++ b/tdodin/app/templates/main_page.html
@@ -28,6 +28,7 @@
 
 	<script type="text/javascript" src="/static/jquery/jquery.js"> </script>
 	<script type="text/javascript" src="/static/jquery/jquery.cookie.js"> </script>
+	<script type="text/javascript" src="/static/jquery/tree.jquery.js"> </script>
 	<script type="text/javascript" src="/static/bootstrap/js/bootstrap.min.js"> </script>	
 	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-notify.js"></script>
 	<script type="text/javascript" src="/static/odin/js/odin.js"></script>
@@ -38,6 +39,7 @@
  	<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap-notify.css">
 	<link rel="stylesheet" type="text/css" href="/static/odin/css/odin.css" />
+	<link rel="stylesheet" type="text/css" href="/static/odin/css/jqtree.css" />
 </head><body>
 
 <div class="container-fluid">
