добавлены курсы валюты ЦБ но НЕ РАБОТАЮТ!

--- a/tdodin/app/templates/main_page.html
+++ b/tdodin/app/templates/main_page.html
@@ -52,6 +52,7 @@
 					{% include "mod_catalog.html"%}
 					{% include "mod_login.html"%}
 					{% include "mod_meteo.html"%}
+					{% include "mod_curcurs.html"%}
 		</div>
 		
 		<div class="media-body site-content">	
